# fredpull

./: .gitignore  Makefile  README.md  pyproject.toml
fredpull/clients/: fred_client.py  fred_http.py
fredpull/ingestion/: download.py  merge.py
fredpull/metadata/: crawl_categories.py  crawl_releases.py  merge_metadata.py
scripts/: analyze.py  build.py  download.py  merge.py  metadata.py
